@@ -1,14 +1,14 @@
 #!/usr/bin/env perl
 
 use strict;
-use warnings;
+use warnings FATAL => 'all';
+use utf8;
 use Capture::Tiny 'capture';
 use File::Find;
 use File::Spec::Functions qw(catdir catfile splitdir splitpath);
 use File::stat;
 use List::Util 'first';
 use POSIX 'strftime';
-use utf8;
 
 my ($LOG_FILE, $ACTION, $NAME, @args) = @ARGV;
 die "Log file argument is missing" if !defined $LOG_FILE;
