@@ -1,5 +1,6 @@
 {{$NEXT}}
     - Use Dist::Zilla
+    - Make all warnings fatal
 
 0.05 Mon Aug  2 08:39:02 GMT 2010
     - Added timestamps to the log file.
